# agentbond

./: .env.example  .gitignore  Dockerfile.backend  LICENSE  Makefile  README.md  ROADMAP.md  ROADMAP_GANTT.md  alembic.ini  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6728e0cb4005_initial_schema.py  b7c9d2e4f0a1_add_webhook_deliveries.py  c3f1a8d2e9b4_add_agent_memories.py  d4e5f6a7b8c9_add_run_verified_column.py  e5f6a7b8c9d0_add_indexes_and_updated_at.py  f6a7b8c9d0e1_add_run_execution_bundle_snapshot.py
backend/: auth.py  config.py  db.py  logging_setup.py  main.py  metrics.py  middleware.py  schemas.py  validation.py
backend/contracts/: interface.py
backend/models/: schema.py
backend/routers/: agents.py  claims.py  operators.py  policies.py  runs.py  scores.py
backend/services/: claim_verifier.py  memory.py  og_client.py  orchestrator.py  policy_engine.py  reputation.py  webhooks.py
cli/: agentbond_cli.py
contracts/: PolicyRegistry.sol  WarrantyPool.sol  hardhat.config.js  package-lock.json  package.json
contracts/src/: ClaimManager.sol  (+4 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
scripts/: demo_run.py  deploy.py  seed.py
tests/: conftest.py  test_auth.py  test_claim_verifier.py  test_e2e.py  test_memory.py  test_middleware.py  test_orchestrator.py  test_policy_engine.py  test_reputation.py  test_run_signature_binding.py  test_validation.py  test_wallet_signature.py  test_webhooks.py
(+29 files in other folders)
