[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbond"
version = "0.1.0"
description = "Verifiable Agent Warranty Network on OpenGradient"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "web3>=6.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.19.0",
    "opengradient>=0.7.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "eth-tester[py-evm]>=0.13.0b1",
]

[tool.setuptools.packages.find]
include = ["backend*", "cli*"]

[project.scripts]
agentbond = "cli.agentbond_cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
